fix alignment for single line text

--- a/src/sass/user.sass
+++ b/src/sass/user.sass
@@ -33,7 +33,9 @@
   .centered-note
     max-width: 450px
     margin: 0 auto
-    text-align: left
+    span
+      display: inline-block
+      text-align: left
 
 .thread.pinned .thread-title
   color: $pinned
